--- a/index.html
+++ b/index.html
@@ -92,6 +92,26 @@
 
         </section>
 
+        <!-- My Goals info section -->
+        <section class="my-goals">
+            <!-- My Goals blog info -->
+            <div class="my-goals-blog">
+                <h2 class="my-goals-title">
+                    My Goals
+                </h2>
+                <p class="goals-description">
+                    Start with something simple and small, then expand over time. If people call it a ‘toy’ you’re definitely onto something
+                </p>
+                <button class="goals-btn">My Altimate Goals <i
+                        class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <!-- My Goals img -->
+            <div class="my-goals-img">
+                <img src="images/goals.png"
+                    alt="">
+            </div>
+        </section>
+
         <!-- my plans section -->
 
         <section class="plans-section">
